# lab_3_places

./: CMakeLists.txt  Config.hpp  Finder.cpp  Finder.hpp  main.cpp
API/: HTTP_Request.cpp  HTTP_Request.hpp  Interesting_place.cpp  Interesting_place.hpp  Weather.cpp  Weather.hpp
JSON/: JSON_Formatter.cpp  JSON_Formatter.hpp
